# red

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
Assets/: chud.ascii  oldbrush.c  oldbrush.l
Assets/Materials/: brickmaterial.mat  brushhover.mat  debugplane.mat  material_grass.mat  nullmaterial.mat  pavingstonesmaterial.mat  sigmundmaterial.mat  testmaterial.mat
Assets/Materials/Editor/: brush_light.mat  skybox.mat
Assets/Shaders/: frag_lit.fs  frag_test.fs  frag_ui.fs  frag_unlit.fs  vert_billboard.vs  vert_lit.vs  vert_test.vs  vert_ui.vs  vert_unlit.vs
include/: imgui_layer.h  inputbase.h
include/client/: client.h
include/corebase/: mathlib.h  mesh.h  texture.h  time.h  vectors.h
include/engine/: assetmanager.h  camera.h  material.h  physics.h  shader.h  texture.h  ui.h  ui_draw.h
include/engine/shared/: physics.h
include/engine/ui/: ui.h  ui_colours.h  ui_draw.h
include/game/: cvar.h  player.h
include/game/client/: cl_console.h  cl_init.h  client.h
include/game/server/: server.h  sv_client.h  sv_init.h
include/glad/: glad.h
include/imgui/: imgui_tables.cpp
include/platform/: audio.h  common.h  input.h  memarena.h  window.h
include/platform/network/: network.h
include/server/: server.h  sv_client.h  sv_init.h
include/shared/: plframe.h
include/shared/network/: client.h  packet.h  pframe.h
src/: imgui_layer.cpp  main.c
src/client/: cl_comm.c  cl_conn.c  cl_init.c  cl_main.c  main.c
src/corebase/: mathlib.c  mesh.c  shader.c  texture.c  time.c  vectors.c
src/engine/: camera.c  mesh.c  physics.c  shader.c  texture.c  ui.c  ui_draw.c  ui_widget.c
src/engine/ui/: ui.c  ui_draw.c  ui_widget.c
src/game/: cvar.c
src/game/client/: cl_comm.c  cl_conn.c  cl_console.c  cl_init.c  cl_main.c
src/game/server/: sv_client.c  sv_comm.c  sv_conn.c  sv_init.c  sv_main.c
src/platform/: common.c  glad.c  imgui_layer.cpp  input.c  window.c
src/platform/network/: network.c
src/server/: sv_client.c  sv_comm.c  sv_conn.c  sv_init.c  sv_main.c
src/shared/network/: packet.c
