cmake_minimum_required(VERSION 3.10)

project(red VERSION 1.0 LANGUAGES C CXX)
add_compile_definitions(_POSIX_C_SOURCE=200112L)

find_package(PkgConfig REQUIRED)

pkg_check_modules(SDL3 REQUIRED sdl3)
pkg_check_modules(SDL3IMAGE REQUIRED sdl3-image)
pkg_check_modules(SDL3TTF REQUIRED sdl3-ttf)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# -------------------------
# Source files
# -------------------------
file(GLOB_RECURSE SOURCE_FILES
    src/*.c
    src/*.cpp
    src/types/*.c
    src/types/*.cpp
    src/rendering/*.c
    src/rendering/*.cpp
)

# -------------------------
# ImGui sources
# -------------------------
set(IMGUI_SRC
    ${CMAKE_SOURCE_DIR}/include/imgui/imgui.cpp
    ${CMAKE_SOURCE_DIR}/include/imgui/imgui_draw.cpp
    ${CMAKE_SOURCE_DIR}/include/imgui/imgui_widgets.cpp
    ${CMAKE_SOURCE_DIR}/include/imgui/imgui_tables.cpp
    ${CMAKE_SOURCE_DIR}/include/imgui/imgui_impl_sdl3.cpp
    ${CMAKE_SOURCE_DIR}/include/imgui/imgui_impl_opengl3.cpp
)

# -------------------------
# Executable
# -------------------------
add_executable(red
    ${IMGUI_SRC}
    ${SOURCE_FILES}
    ${EXTRA_SOURCES}
)

# -------------------------
# Include directories
# -------------------------
target_include_directories(red PRIVATE
    ${SDL3_INCLUDE_DIRS}
    ${SDL3IMAGE_INCLUDE_DIRS}
    ${SDL3TTF_INCLUDE_DIRS}

    ${CMAKE_SOURCE_DIR}/include
)

# -------------------------
# Link directories
# -------------------------
target_link_directories(red PRIVATE
    ${SDL3_LIBRARY_DIRS}
    ${SDL3IMAGE_LIBRARY_DIRS}
    ${SDL3TTF_LIBRARY_DIRS}
)

# -------------------------
# SDL libraries
# -------------------------
target_link_libraries(red PRIVATE
    ${SDL3_LIBRARIES}
    ${SDL3IMAGE_LIBRARIES}
    ${SDL3TTF_LIBRARIES}
)

# -------------------------
# Platform-specific libs
# -------------------------
if (WIN32)

    target_link_libraries(red PRIVATE
        opengl32
    )

elseif(UNIX)

    target_link_libraries(red PRIVATE
        m
        GL
        stdc++
    )

endif()

# -------------------------
# C/C++ settings
# -------------------------
set_target_properties(red PROPERTIES
    LINKER_LANGUAGE CXX
    C_STANDARD 11
    C_STANDARD_REQUIRED YES
    C_EXTENSIONS NO
)

# -------------------------
# AddressSanitizer
# -------------------------
if (CMAKE_BUILD_TYPE STREQUAL "Debug")

    if (NOT WIN32)

        target_compile_options(red PRIVATE
            -fsanitize=address
            -fno-omit-frame-pointer
            -g
        )

        target_link_options(red PRIVATE
            -fsanitize=address
        )

    endif()

endif()

# -------------------------
# Debug messages
# -------------------------
message(STATUS "SDL3 Include Dir: ${SDL3_INCLUDE_DIRS}")
message(STATUS "SDL3 Libraries: ${SDL3_LIBRARIES}")

message(STATUS "SDL3_image Include Dir: ${SDL3IMAGE_INCLUDE_DIRS}")
message(STATUS "SDL3_image Libraries: ${SDL3IMAGE_LIBRARIES}")

message(STATUS "SDL3_ttf Include Dir: ${SDL3TTF_INCLUDE_DIRS}")
message(STATUS "SDL3_ttf Libraries: ${SDL3TTF_LIBRARIES}")
